Updated Accordion minimum required styles by preparing transition effect (option) for accordion panels

--- a/examples/accordion/index.html
+++ b/examples/accordion/index.html
@@ -59,7 +59,7 @@
         </div>
       </section>
       <section>
-        <h2>Example 3: No default opened panel. Ability to open multiple panels at a time. The last panel contains a nested accordion example.</h2>
+        <h2>Example 3: No default opened panel. Ability to open multiple panels at a time. The last panel contains a nested accordion example with a transition effect.</h2>
         <div data-aria-accordion data-aria-accordion-allow-multiple>
           <h3 data-aria-accordion-heading>Accordion Header 7</h3>
           <div data-aria-accordion-panel>
