Issue #8: Improved both CSS transitions and minimum required styles defining them as common styles for all WAI-ARIA widgets

--- a/examples/disclosure/index.html
+++ b/examples/disclosure/index.html
@@ -10,7 +10,7 @@
     </script>
     <link rel="stylesheet" href="../../web/css/base.css" />
     <link rel="stylesheet" href="css/disclosure.css" />
-    <link rel="stylesheet" href="../../dist/disclosure/css/disclosure.min.css" />
+    <link rel="stylesheet" href="../../dist/css/aria-required.min.css" />
   </head>
   <body>
     <main role="main">
