Issue #8: Updated HTML Disclosure example 2: Using an existing button (Draft version)

--- a/examples/disclosure/index.html
+++ b/examples/disclosure/index.html
@@ -31,6 +31,16 @@
           <p>The visual indication of expanded and collapsed states is synchronized with the value of <code>aria-expanded</code> using a CSS attribute selector and <code>:before</code> pseudo element that generates an arrow with the <code>content</code> property.</p>
         </div>
       </section>
+      <section>
+        <h2>Example 2: Toggle the visibility of content using an existing <code>button</code> element which is meant to be used as the disclosure controller.</h2>
+        <p>This implementation allow you to identify an existing <code>button</code> element as the disclosure controller using its <code>id</code> as value of the <code>data-aria-disclosure-controller</code> attribute, set on the disclosure content.</p>
+        <p>Remember that when you choose to use your own <code>button</code> element as triggering element, the reading order in a screen-reader which is based on the order of the HTML elements in the DOM (Document Object Model), has to keep the default tab order.</p>
+        <p><button id="dis-trigger" class="button--disclosure">Toggle Content (from this existing <code>button</code> element)</button></p>
+        <div data-aria-disclosure data-aria-disclosure-controller="dis-trigger">
+          <p>That's why new dynamic content has to be inserted into the DOM immediately following the element that was activated to trigger the script. The triggering element must be a <code>button</code> element (natively focusable and activatable).</p>
+          <p>Focus remains on the activated element and the new content, inserted after it, becomes the next thing in both the tab order and screen-reader reading order. This implementation is necessary to meet the WCAG 2.1 - <a href="https://www.w3.org/WAI/WCAG21/Understanding/focus-order">2.4.3: Focus Order</a> criterion.</p>
+        </div>
+      </section>
     </main> <!-- /.content-area -->
     <script src="../../dist/disclosure/js/disclosure.min.js"></script>
   </body>
